modified these file for testing cards & button (luthfi)

--- a/frontend/my-react-app/src/index.css
+++ b/frontend/my-react-app/src/index.css
@@ -25,11 +25,14 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -37,7 +40,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -54,7 +57,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 /* STYLING ABOUT */
 .about-image {
@@ -81,5 +84,6 @@ button:focus-visible {
 @tailwind utilities;
 
 html {
+  max-width: 100vw;
   text-size-adjust: 100%;
 }
