--- a/frontend/my-react-app/src/index.css
+++ b/frontend/my-react-app/src/index.css
@@ -15,15 +15,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0 auto;
   padding: 0;
@@ -33,6 +24,20 @@ body {
   min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+html {
+  max-width: 100vw;
+  text-size-adjust: 100%;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
 }
 
 h1 {
@@ -79,11 +84,23 @@ button:focus-visible {
   }
 }
 
+@media (min-width: 1024px) {
+   main {
+      width: 1104px;
+      margin: 0 auto;
+      padding: 20px;
+   }
+}
+
+@media (max-width: 1024px) {
+   main {
+      width: 100%;
+      padding: 10px;
+   }
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html {
-  max-width: 100vw;
-  text-size-adjust: 100%;
-}
