--- a/frontend/my-react-app/src/index.css
+++ b/frontend/my-react-app/src/index.css
@@ -16,9 +16,9 @@
 }
 
 body {
-  margin: 0 auto;
-  padding: 0;
-  display: flex;
+  /* margin: 0 auto; */
+  /* padding: 0; */
+  /* display: flex; */
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
